# interval_map

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  default.nix
nixpkgs/: default.nix  hashes.nix
src/: data-structure.cpp  data-structure.hpp  main.cpp  test.cpp
